--- a/package.json
+++ b/package.json
@@ -1,18 +1,21 @@
 {
-  "name": "newspaper-lite",
-  "title": "Newspaper Lite",
-  "version": "1.4.0",
-  "homepage": "https://store.mirrorgrid.com/plugins/newspaper-lite/",
+  "name": "multicommerce",
+  "title": "MultiCommerce",
+  "version": "1.0.0",
+  "homepage": "https://themeegg.com/downloads/multicommerce/",
   "repository": {
     "type": "git",
-    "url": "https://github.com/mirrorgrid/newspaper-lite.git"
+    "url": "https://github.com/themeegg/multicommerce.git"
   },
   "license": "GPL-3.0+",
   "main": "Gruntfile.js",
   "devDependencies": {
-    "autoprefixer": "~7.2.3",
+    "autoprefixer": "^7.2.6",
+    "connect-livereload": "^0.6.0",
     "grunt": "^1.0.1",
+    "grunt-browser-sync": "^2.2.0",
     "grunt-checktextdomain": "^1.0.1",
+    "grunt-contrib-clean": "^1.1.0",
     "grunt-contrib-compress": "^1.4.3",
     "grunt-contrib-concat": "~1.0.1",
     "grunt-contrib-cssmin": "^2.2.0",
@@ -23,16 +26,20 @@
     "grunt-phpcbf": "^0.1.1",
     "grunt-phpcs": "^0.4.0",
     "grunt-postcss": "~0.9.0",
+    "grunt-potomo": "^3.5.0",
     "grunt-rtlcss": "~2.0.1",
     "grunt-sass": "^2.0.0",
     "grunt-stylelint": "~0.9.0",
-    "grunt-wp-i18n": "^1.0.0"
+    "grunt-wp-i18n": "^1.0.2"
   },
   "engines": {
     "node": ">=0.8.0",
     "npm": ">=1.1.0"
   },
   "dependencies": {
+    "grunt-contrib-copy": "^1.0.0",
+    "grunt-css-url-replace": "^0.2.7",
+    "grunt-reload": "^0.2.0",
     "node-bourbon": "^4.2.8",
     "uglify": "^0.1.5"
   }
